--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     color: #FFFFFF;
     padding: 12px 36px;
     border: none;
-    border-radius: 8px;
+    border-radius: 10px;
     font-size: 16px;
     font-weight: bold;
     cursor: pointer;
@@ -63,7 +63,7 @@ header {
 }
 
 .cta {
-    margin-bottom: 158px;
+    /* margin-bottom: 150px; */
 }
 
 /* Style for Action  */
@@ -139,7 +139,8 @@ h3 {
     margin: 50px auto;
     max-width: 1140px;
     height: 50px;
-    padding: 50px 0;
+    padding: 50px auto;
+    padding-bottom: 400px;
 }
 .reviews{
     display: flex;
@@ -158,7 +159,7 @@ h1{
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
   padding: 24px ;
   height: 200px;
-  text-align: left;
+  text-align: left;;
 }
 .review-card h2 {
     font-size: 25px;
@@ -188,3 +189,48 @@ h1{
   color: #999;
   margin: 5px 0 0;
 }
+
+/* Get in Touch */
+.touch{ 
+    display: flex;
+    gap: 100px;
+   max-width: 1140px;
+    margin: 50px auto;
+    padding: 50px 0;
+    /* background-color: #FFFFFF; */
+    justify-content: space-around;
+    align-items: center;
+
+}
+.touch-title {
+    font-size: 97px;
+    font-weight: 700;
+    font-family: "Raleway", sans-serif;
+    margin-bottom: 20px;
+}
+input[type="text"],
+input[type="email"],
+textarea  {
+ width: 500px;
+    height: 70px;
+    /* padding: 10px; */
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    font-size:16px;
+    font-family: "Raleway", sans-serif;
+    /* margin-bottom: 20px; */
+}
+textarea {
+    height: 150px;
+    resize: none;
+}
+.contact-form p{
+    font-size: 18px;
+    font-family: "Inter", sans-serif;
+    color: #000000;}
+
+    .submit-btn {
+    width: 100%;
+    height: 70px;
+
+    /* footer section */
